--- a/.github/workflows/updateAndCreate ( Android For Strato ).yml
+++ b/.github/workflows/updateAndCreate ( Android For Strato ).yml
@@ -23,9 +23,9 @@ jobs:
       id: sync
       uses: aormsby/Fork-Sync-With-Upstream-action@v3.4
       with:
-        target_sync_branch: master
+        target_sync_branch: jit
         target_repo_token: ${{ secrets.GITHUB_TOKEN }}
-        upstream_sync_branch: master
+        upstream_sync_branch: jit
         upstream_sync_repo: strato-emu/strato
         upstream_pull_args: '-s recursive -Xtheirs'
         target_branch_push_args: --force
