Update Strato For Android.yml

--- a/.github/workflows/Strato For Android.yml
+++ b/.github/workflows/Strato For Android.yml
@@ -5,22 +5,10 @@ on:
   
 jobs:
   build:
-    # Skip 'labeled' events that didn't add the 'ci' label
-    if: |
-      github.event_name != 'pull_request' ||
-      github.event.action != 'labeled' ||
-      github.event.label.name == 'ci'
     runs-on: ubuntu-latest
-    env:
-      JVM_OPTS: -Xmx6G
-      IS_BUILD_SIGNED: ${{ secrets.KEYSTORE != '' }}
-      UPLOAD_ARTIFACTS: ${{ github.event_name != 'pull_request' || contains(github.event.pull_request.labels.*.name, 'ci') }}
-      CMAKE_VERSION: "3.22.1"
-      NDK_VERSION: "26.1.10909125"
-
     steps:
       - name: Git Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: recursive
 
@@ -30,7 +18,7 @@ jobs:
           max-size: 3Gi
 
       - name: Restore Gradle Cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: ~/.gradle/
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/build.gradle') }}-${{ hashFiles('app/**/*.xml') }}-${{ hashFiles('app/**.kt', 'app/**.java') }}
@@ -39,22 +27,18 @@ jobs:
             ${{ runner.os }}-gradle-${{ hashFiles('**/build.gradle') }}-
             ${{ runner.os }}-gradle-
 
-      - name: Install Java 17
+      - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin' # Temurin should come pre-installed on GitHub-hosted runners
-          java-version: '17'
+          java-version: 17
+          distribution: "temurin"
 
       - name: Install Ninja Build
         run: |
           sudo apt-get install -y ninja-build
           ln -s /usr/bin/ninja .
 
-      - name: Install CMake & Android NDK
-        run: echo "yes" | $ANDROID_HOME/tools/bin/sdkmanager "cmake;${{ env.CMAKE_VERSION }}" "ndk;${{ env.NDK_VERSION }}" --channel=3 | grep -v = || true
-
       - name: Decode Keystore
-        if: env.IS_BUILD_SIGNED == 'true'
         env:
           KEYSTORE_ENCODED: ${{ secrets.KEYSTORE }}
         run: echo $KEYSTORE_ENCODED | base64 --decode > "/home/runner/keystore.jks"
@@ -68,39 +52,34 @@ jobs:
           CMAKE_C_COMPILER_LAUNCHER: "ccache"
           CMAKE_CXX_COMPILER_LAUNCHER: "ccache"
           CCACHE_COMPILERCHECK: "string:${{ env.NDK_VERSION }}"
-        run: ./gradlew --stacktrace --build-cache --parallel --configure-on-demand assembleMainlineRelease assembleMainlineReldebug
-
-      - name: Rename APKs (Signed)
-        if: env.IS_BUILD_SIGNED == 'true' && env.UPLOAD_ARTIFACTS == 'true'
         run: |
-          mv app/build/outputs/apk/mainline/reldebug/app-mainline-reldebug.apk strato-$GITHUB_RUN_NUMBER-reldebug.apk
-          mv app/build/outputs/apk/mainline/release/app-mainline-release.apk strato-$GITHUB_RUN_NUMBER-release.apk
+          ./gradlew --stacktrace --configuration-cache --build-cache --parallel --configure-on-demand assembleMainlineRelease assembleDevReldebug
 
-      - name: Upload Signed Debug APK
-        if: env.IS_BUILD_SIGNED == 'true' && env.UPLOAD_ARTIFACTS == 'true'
-        uses: actions/upload-artifact@v3
+      - name: Compute git short sha
+        shell: bash
+        run: echo "git_short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+        
+      - if : failure()
+        uses: actions/upload-artifact@v4
         with:
-          name: strato-${{ github.run_number }}-reldebug.apk
-          path: strato-${{ github.run_number }}-reldebug.apk
+          name: strato-${{ env.git_short_sha }}-failed-build-report.zip
+          path: /home/runner/work/stratos/stratos/build/reports/*
 
-      - name: Upload Signed Release APK
-        if: env.IS_BUILD_SIGNED == 'true' && env.UPLOAD_ARTIFACTS == 'true'
-        uses: actions/upload-artifact@v3
+      - if : success()
+        uses: actions/upload-artifact@v4
         with:
-          name: strato-${{ github.run_number }}-release.apk
-          path: strato-${{ github.run_number }}-release.apk
-
-      - name: Rename APKs (Unsigned)
-        if: env.IS_BUILD_SIGNED == 'false' && env.UPLOAD_ARTIFACTS == 'true'
-        run: |
-          mv app/build/outputs/apk/mainline/reldebug/app-mainline-reldebug.apk strato-$GITHUB_RUN_NUMBER-unsigned-reldebug.apk
-          mv app/build/outputs/apk/mainline/release/app-mainline-release.apk strato-$GITHUB_RUN_NUMBER-unsigned-release.apk
-
-      - name: Upload Unsigned Debug APK
-        if: env.IS_BUILD_SIGNED == 'false' && env.UPLOAD_ARTIFACTS == 'true'
-        uses: actions/upload-artifact@v3
+          name: strato-${{ env.git_short_sha }}-success-build-report.zip
+          path: /home/runner/work/stratos/stratos/build/reports/configuration-cache/*
+        
+      - uses: actions/upload-artifact@v4
         with:
-          name: strato-${{ github.run_number }}-unsigned-reldebug.apk
+          name: strato-${{ env.git_short_sha }}-release.apk
+          path: app/build/outputs/apk/mainline/release/app-mainline-release.apk
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: strato-${{ env.git_short_sha }}-debug.apk
+          path: app/build/outputs/apk/dev/reldebug/app-dev-reldebug.apk
           path: strato-${{ github.run_number }}-unsigned-reldebug.apk
 
       - name: Upload Unsigned Release APK
