--- a/.github/workflows/Strato For Android.yml
+++ b/.github/workflows/Strato For Android.yml
@@ -2,6 +2,7 @@ name: CI
 
 on:
   workflow_dispatch:
+  
 jobs:
   build:
     # Skip 'labeled' events that didn't add the 'ci' label
@@ -67,12 +68,12 @@ jobs:
           CMAKE_C_COMPILER_LAUNCHER: "ccache"
           CMAKE_CXX_COMPILER_LAUNCHER: "ccache"
           CCACHE_COMPILERCHECK: "string:${{ env.NDK_VERSION }}"
-        run: ./gradlew --stacktrace --build-cache --parallel --configure-on-demand assembleMainlineRelease assembleMainlineReldebug
+        run: ./gradlew --stacktrace --build-cache --parallel --configure-on-demand assembleMainlineRelease assembleDevReldebug
 
       - name: Rename APKs (Signed)
         if: env.IS_BUILD_SIGNED == 'true' && env.UPLOAD_ARTIFACTS == 'true'
         run: |
-          mv app/build/outputs/apk/mainline/reldebug/app-mainline-reldebug.apk strato-$GITHUB_RUN_NUMBER-reldebug.apk
+          mv app/build/outputs/apk/dev/reldebug/app-dev-reldebug.apk strato-$GITHUB_RUN_NUMBER-reldebug.apk
           mv app/build/outputs/apk/mainline/release/app-mainline-release.apk strato-$GITHUB_RUN_NUMBER-release.apk
 
       - name: Upload Signed Debug APK
@@ -92,7 +93,7 @@ jobs:
       - name: Rename APKs (Unsigned)
         if: env.IS_BUILD_SIGNED == 'false' && env.UPLOAD_ARTIFACTS == 'true'
         run: |
-          mv app/build/outputs/apk/mainline/reldebug/app-mainline-reldebug.apk strato-$GITHUB_RUN_NUMBER-unsigned-reldebug.apk
+          mv app/build/outputs/apk/dev/reldebug/app-dev-reldebug.apk strato-$GITHUB_RUN_NUMBER-unsigned-reldebug.apk
           mv app/build/outputs/apk/mainline/release/app-mainline-release.apk strato-$GITHUB_RUN_NUMBER-unsigned-release.apk
 
       - name: Upload Unsigned Debug APK
